<resources>
    <string name="app_name">FutLife</string>
    <string name="url_test">http://192.168.0.186:8000/m/v1</string>
    <string name="url_api">http://35.160.110.11/m/v1</string>
    <string name="url_admin">http://35.160.110.11/admin</string>
    <string name="url_api_notification_payments">http://35.160.110.11/m/v1/recharge/notify/first</string>
    <string name="url_api_notification_recharge">http://35.160.110.11/m/v1/recharge/notify/last</string>
    <string name="login_email">Usuario o Correo Electronico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_reset_password">¿Olvidaste tu contraseña?</string>
    <string name="login_tag_register">¿Aún no tienes cuenta? <b><i>¡Registrate!</i></b></string>
    <string name="register_email">Correo Electronico</string>
    <string name="register_fullname">Nombre Completo</string>
    <string name="register_username">Usuario Futlife</string>
    <string name="title_activity_select_console">SelectConsole</string>
    <string name="select_console_title">Escoge Tu Consola</string>
    <string name="select_console_subtitle">Puedes Escoger Más de Una</string>
    <string name="select_console_title_list">Consolas Seleccionadas</string>
    <string name="select_game_title">Escoge Tu Juego</string>
    <string name="select_game_subtitle">Puedes Escoger Más de Un Juego</string>
    <string name="dialog_title_player_id">Agregue un PLAYER ID a la consola</string>
    <string name="dialog_your_player_id">Ingresa tu Player ID</string>
    <string name="dialog_title_information">Actualiza tú información personal</string>
    <string name="dialog_description_question">Selecciona la consola para el juego</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_update">Actualizar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Si</string>
    <string name="summary_title_activity">Resumen</string>
    <string name="summary_button_confirm">Confirmar</string>
    <string name="row_count_1">1</string>
    <string name="title_activity_timeline">Timeline</string>
    <string name="label_notification_cancel">Rechazar</string>
    <string name="label_notification_annul">Abandonar</string>
    <string name="label_notification_wait">En Espera</string>
    <string name="label_notification_done">Aceptar</string>
    <string name="label_notification_new">¡Nuevo!</string>
    <string name="label_state_challenge">Recibido</string>
    <string name="label_upload_result">Enviar Marcador</string>
    <string name="retar">Retar</string>
    <string name="challenge_username">Usuario</string>
    <string name="score_1">1</string>
    <string name="score_3">3</string>
    <string name="amount">$100 M</string>
    <string name="dialog_challenge_title">RETO</string>
    <string name="dialog_challenge_amount">Valor</string>
    <string name="dialog_challenge_real_amount">Ganancia</string>
    <string name="dialog_challenge_lbl_real_amount">Valor de ganancia real</string>
    <string name="dialog_challenge_consoles">Consolas</string>
    <string name="dialog_challenge_games">Juegos</string>
    <string name="dialog_challenge_cancel">Cancelar</string>
    <string name="dialog_challenge_done">Retar</string>
    <string name="dialog_challenge_not_found">No tienes consolas en comun con este jugador</string>
    <string name="dialog_open_challenge_title">RETO ABIERTO</string>
    <string name="dialog_open_challenge_amount">Apuesta:</string>
    <string name="dialog_open_challenge_real_amount">Ganancia:</string>
    <string name="dialog_open_challenge_consoles">Consola:</string>
    <string name="dialog_open_challenge_games">Juego:</string>
    <string name="dialog_open_challenge_cancel">Cancelar</string>
    <string name="dialog_open_challenge_done">Aceptar Reto</string>
    <string name="dialog_score_title">MARCADOR</string>
    <string name="dialog_score_points">:</string>
    <string name="dialog_score">0</string>
    <string name="dialog_score_consoles">Tu marcador</string>
    <string name="dialog_score_games">Marcador rival</string>
    <string name="dialog_score_cancel">Cancelar</string>
    <string name="dialog_score_done">Enviar</string>
    <string name="dialog_balance_title">¡Sin Saldo!</string>
    <string name="dialog_balance_message">No tienes el saldo suficiente para iniciar o aceptar un reto, recarga escogiendo entre nuestros dos metodos de pago (tarjeta o efectivo).</string>
    <string name="dialog_balance_cancel">Cancelar</string>
    <string name="dialog_balance_done">Recargar</string>
    <string name="dialog_player_title">¡Sin Player ID!</string>
    <string name="dialog_player_message">Antes de iniciar o aceptar un reto, primero debes agregar un Player ID a cada consola que seleccionaste en tus preferencias.</string>
    <string name="dialog_player_cancel">Cancelar</string>
    <string name="dialog_player_done">Agregar Player ID</string>
    <string name="dialog_delete_message">¿Estas seguro que deseas eliminar este reto?.</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="dialog_delete_ok">Eliminar</string>
    <string name="dialog_score_title_notification">MARCADOR</string>
    <string name="dialog_score_notification">4 &#8211; 2</string>
    <string name="dialog_score_cancel_notification">Apelar</string>
    <string name="dialog_score_done_notification">Confirmar</string>
    <string name="dialog_leave_challenge_title">¿Deseas Abandonar?</string>
    <string name="dialog_leave_challenge_message">Recuerda que al abandonar un reto estas aceptando perder por un marcador de 3 a 0 y de perder tu dinero de la apuesta. ¿Deseas abandonar el reto?</string>
    <string name="dialog_leave_challenge_cancel">Cancelar</string>
    <string name="dialog_leave_challenge_done">Abandonar</string>
    <string name="dialog_leave_title">Tu rival abandono</string>
    <string name="dialog_leave_message">Tu rival ha decidido abandonar el reto, por consiguiente has ganado el reto con un marcador de 3 a 0 y el valor de la apuesta.</string>
    <string name="dialog_leave_done">Aceptar</string>
    <string name="dialog_title_youtube">Agrega el codigo de tu video en youtube</string>
    <string name="dialog_url_video_youtube">youtube.com/watch?v=[tu-codigo]</string>
    <string name="dialog_url_video">youtube.com/watch?v=</string>
    <string name="dialog_url_full_video">https://www.youtube.com/watch?v=</string>
    <string name="dialog_your_code_video">Ingresa tú codigo de video</string>
    <string name="dialog_ok_youtube">anexar video</string>
    <string name="dialog_cancel_youtube">Cancelar</string>
    <string name="action_search">Buscar</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_options">Opciones</string>
    <string name="action_payments">Recargas y Saldo</string>
    <string name="action_retiros">Retiros</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_intro">Introducción</string>
    <string name="action_tournament">Torneos</string>
    <string name="title_navigation">Menu</string>
    <string name="subtitle_navigation">Contacto</string>
    <string name="action_menu">Menu Principal</string>
    <string name="action_home">Mi Perfil</string>
    <string name="action_about">Quiénes Somos</string>
    <string name="action_help">Ayuda</string>
    <string name="action_defeated">Retos Vencidos</string>
    <string name="action_reported">Retos Reportados</string>
    <string name="action_terms_conditions">Terminos y Condiciones</string>
    <string name="action_send">Enviar Correo</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_preferences">&#160;&#160;Preferencias&#160;&#160;</string>
    <string name="menu_information">&#160;&#160;Información&#160;&#160;</string>
    <string name="facebook_app_id">1662105864092619</string>
    <string name="facebook_provider_social">facebook</string>
    <string name="view_profile_player">Ver Perfil</string>
    <string name="challenge_player">Retar</string>
    <string name="consoles_player">Consolas</string>
    <string name="record_player">Estadísticas</string>
    <string name="lbl_consoles_profile">Consolas:</string>
    <string name="lbl_games_profile">Juegos:</string>
    <string name="percentage_vicotires">Porcentaje de Victorias: 40%</string>
    <string name="preferences_not_found">Este jugador aún no registra sus preferencias.</string>
    <string name="matchs_not_found">Este jugador aún no tiene un historial de juegos.</string>
    <string name="statitics_not_found">Este jugador aún no tiene estadisticas de sus juegos.</string>
    <string name="challenges_not_found">No tienes notificaciones pendientes.</string>
    <string name="data_not_found">Sin resultados de busqueda.</string>
    <string name="open_challenges_not_found">Aún no hay retos abiertos.</string>
    <string name="title_players_ids">Mis PLAYER ID</string>
    <string name="intro_image_one">
        YA HACES PARTE DE LA RED MÁS GRANDE DE GAMERS DE FÚTBOL
    </string>
    <string name="intro_image_two">
        AQUI PODRAS PARTICIPAR EN TORNEOS ONLINE DE JUEGOS DE PES Y FIFA
    </string>
    <string name="intro_image_three">
        GANA GRANDES PREMIOS SUPERANDO A TUS RIVALES
    </string>
    <string name="title_activity_profile">Profile</string>
    <string name="development_app_key">zEvpMWP9SZiigK437waCZg</string>
    <string name="development_app_secret">kj-XKViCRM6s5zohoBZs9w</string>
    <string name="production_app_key">zEvpMWP9SZiigK437waCZg</string>
    <string name="production_app_secret">kj-XKViCRM6s5zohoBZs9w</string>
    <string name="gcm_sender">287814654687</string>
    <string name="title_activity_base_frames">BaseFrames</string>
    <string name="public_api_key">c4edff678407b6e4b55a97a0e3024438</string>
    <string name="private_api_key">e75d3085832ae96d5a1c0158d568bb54</string>
    <string name="str_all_selected">Todos</string>
    <string-array name="titles">
        <item>Todo</item>
        <item>FIFA16</item>
        <item>FIFA17</item>
        <item>PES16</item>
        <item>PES17</item>
        <item>XBOX 360</item>
        <item>XBOX ONE</item>
        <item> PS3 </item>
        <item> PS4 </item>
    </string-array>
    <string name="title_activity_chat_room">ChatRoom</string>
    <string name="lbl_time_back">00:00:00</string>
    <string name="hint_chat">Escribir mensaje</string>
    <string name="text_random">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="text_message_admin">En esta pantalla puedes chatear con tu rival. En la opción [+] podras encontrar las opciones para agregar un marcador al reto con tu oponente,
        o por el contrario abandonar el reto. Recuerda que puedes apelar a un marcador que creas no es el correcto y reportar el reto para que sea solucionado por los administradores.</string>
    <string name="title_activity_payments">Recargas</string>
    <string name="lbl_identification">Número Documento</string>
    <string name="lbl_first_name_client">Nombres</string>
    <string name="lbl_last_name_client">Apellidos</string>
    <string name="lbl_email_client">Correo Electrónico</string>
    <string name="lbl_telephone_client">Teléfono</string>
    <string name="validate_credit_card">Siguiente</string>
    <string name="lbl_title_efecty">Pago en Efectivo</string>
    <string name="lbl_value_charge">Valor</string>
    <string name="lbl_real_value_charge">Valor con descuento de pasarela</string>
    <string name="lbl_real_charge">Valor de recarga real</string>
    <string name="title_activity_feedback">Contactanos</string>
</resources>