<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".views.Timeline">

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_search"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_search"
                android:title="@string/action_search"
                android:icon="@drawable/ic_profile"
                android:orderInCategory="100"
                app:showAsAction="ifRoom|collapseActionView"/>
            <item
                android:id="@+id/action_filter"
                android:title="@string/action_filter"
                android:icon="@drawable/ic_filter"
                android:orderInCategory="100"
                app:showAsAction="ifRoom|collapseActionView"/>
        </menu>
    </item>

</menu>