<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/icons"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lbl_title_dialog"
            android:padding="16dp"
            android:text="@string/dialog_title_youtube"
            android:textColor="@color/primaryText"
            android:textSize="19sp"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_console_preference"
            android:contentDescription="@string/action_about"
            android:layout_marginTop="12dp"
            android:src="@drawable/youtube"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <TextView
            android:id="@+id/lbl_url_youtube"
            android:text="@string/dialog_url_video_youtube"
            android:textColor="@color/secondaryText"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txt_video_code"
            android:background="@drawable/background_view_grey"
            android:layout_gravity="center"
            android:hint="@string/dialog_your_code_video"
            android:textColorHint="@color/divider"
            android:textColor="@color/secondaryText"
            android:inputType="textPersonName"
            android:ems="12"
            android:textAlignment="center"
            android:ellipsize="start"
            android:gravity="center"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <LinearLayout
            app:layout_widthPercent="100%"
            app:layout_heightPercent="15%"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/but_cancel_dialog"
                android:background="@drawable/background_button_cancel"
                android:text="@string/dialog_cancel_youtube"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/icons"
                android:layout_margin="8dp"
                android:layout_width="120dp"
                android:layout_height="45dp" />
            <Button
                android:id="@+id/but_ok_dialog"
                android:background="@drawable/background_button"
                android:text="@string/dialog_ok_youtube"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/icons"
                android:layout_margin="8dp"
                android:layout_width="150dp"
                android:layout_height="45dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>