<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content_efecty"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ideamosweb.futlife.views.Payments"
    tools:showIn="@layout/activity_payments">

    <LinearLayout
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@drawable/background_card_credit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/lbl_title_efecty"
            android:text="@string/lbl_title_efecty"
            android:textColor="@color/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:padding="1dp"
                android:background="@drawable/background_view_grey"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_weight=".33"
                android:layout_width="0dp"
                android:layout_height="43dp">
                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/sp_type_doc_efecty"
                    android:textSize="18sp"
                    android:textColor="@color/secondaryText"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:id="@+id/txt_identification_efecty"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="15"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:hint="@string/lbl_identification"
                android:textColorHint="@color/divider"
                android:textColor="@color/secondaryText"
                android:background="@drawable/background_view_grey"
                android:layout_weight=".67"
                android:layout_width="0dp"
                android:layout_height="43dp" />
        </LinearLayout>
        <EditText
            android:id="@+id/txt_first_name_client_efecty"
            android:layout_marginTop="6dp"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/lbl_first_name_client"
            android:textColorHint="@color/divider"
            android:textColor="@color/secondaryText"
            android:background="@drawable/background_view_grey"
            android:layout_width="match_parent"
            android:layout_height="41dp" />
        <EditText
            android:id="@+id/txt_last_name_client_efecty"
            android:layout_marginTop="6dp"
            android:inputType="textPersonName|textCapWords"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/lbl_last_name_client"
            android:textColorHint="@color/divider"
            android:textColor="@color/secondaryText"
            android:background="@drawable/background_view_grey"
            android:layout_width="match_parent"
            android:layout_height="38dp" />
        <EditText
            android:id="@+id/txt_email_client_efecty"
            android:layout_marginTop="6dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/lbl_email_client"
            android:textColorHint="@color/divider"
            android:textColor="@color/secondaryText"
            android:background="@drawable/background_view_grey"
            android:layout_width="match_parent"
            android:layout_height="41dp" />
        <EditText
            android:id="@+id/txt_phone_client_efecty"
            android:layout_marginTop="6dp"
            android:inputType="number|phone"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:hint="@string/lbl_telephone_client"
            android:textColorHint="@color/divider"
            android:textColor="@color/secondaryText"
            android:background="@drawable/background_view_grey"
            android:layout_width="match_parent"
            android:layout_height="41dp" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_amount_charge_efecty"
                android:text="@string/lbl_value_charge"
                android:layout_marginEnd="6dp"
                android:textSize="18sp"
                android:textColor="@color/primaryText"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <pl.polak.clicknumberpicker.ClickNumberPickerView
                android:id="@+id/txt_value_charge"
                android:layout_width="match_parent"
                android:layout_height="41dp"
                app:decimal_number="0"
                app:max_value="100000"
                app:min_value="20000"
                app:step="1000"
                app:picker_corner_radius="8"
                app:swipe_enabled="false"
                app:left_picker_layout="@layout/left_picker_layout"
                app:right_picker_layout="@layout/right_picker_layout"
                app:pickers_background_color="@color/divider"
                app:value_background_color="@color/buttons"
                app:value_text_color="@color/secondaryText"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/lbl_real_value"
                android:text="@string/lbl_real_value_charge"
                android:textSize="15sp"
                android:textAlignment="center"
                android:textColor="@color/primaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/txt_real_value_efecty"
                android:inputType="number|phone"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:hint="@string/lbl_real_charge"
                android:textColorHint="@color/divider"
                android:textColor="@color/secondaryText"
                android:textAlignment="center"
                android:enabled="false"
                android:focusable="false"
                android:background="@drawable/background_view_grey"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="41dp" />
        </LinearLayout>
        <Button
            android:id="@+id/but_validate_charge_efecty"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:text="@string/validate_credit_card"
            android:background="@drawable/background_button"
            android:layout_width="170dp"
            android:layout_height="37dp" />
    </LinearLayout>

</RelativeLayout>