<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="190dp"
    android:background="@color/colorPrimaryDark"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/img_nav_header"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar_user"
            android:src="@drawable/avatar_default"
            app:border_color="@color/color_success"
            app:border_width="3dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing" />
        <TextView
            android:id="@+id/lbl_fullname_navigation"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_fullname"
            android:textSize="16sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        <TextView
            android:id="@+id/lbl_email_navigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_email"
            android:textSize="14sp"/>
    </LinearLayout>

</RelativeLayout>
